# rustdesk-monitor-screen

./: .gitignore  build.gradle
src/androidTest/java/youyou/monitor/screen/: ExampleInstrumentedTest.kt
src/main/: AndroidManifest.xml
src/main/assets/: monitor_config_default.json
src/main/cpp/: CMakeLists.txt  yoyo.cpp
src/main/java/com/tools/yoyo/: NativeLib.kt
src/main/java/com/youyou/monitor/: BuildConfig.kt  MonitorService.kt  MonitorServiceCompat.kt
src/main/java/com/youyou/monitor/core/domain/model/: Models.kt
src/main/java/com/youyou/monitor/core/domain/repository/: Repositories.kt
src/main/java/com/youyou/monitor/core/domain/usecase/: ManageTemplatesUseCase.kt
src/main/java/com/youyou/monitor/core/matcher/: TemplateMatcher.kt  TemplateMatcherFactory.kt  TemplateMatcherManager.kt
src/main/java/com/youyou/monitor/di/: MonitorModule.kt
src/main/java/com/youyou/monitor/infra/logger/: LegacyLog.kt  Log.kt
src/main/java/com/youyou/monitor/infra/matcher/: GrayscaleMultiScaleMatcher.kt  SmartGridScaleMatcher.kt  TemplateFileUtil.kt
src/main/java/com/youyou/monitor/infra/network/: WebDavClient.kt
src/main/java/com/youyou/monitor/infra/processor/: AdvancedFrameProcessor.kt
src/main/java/com/youyou/monitor/infra/repository/: ConfigRepositoryImpl.kt  StorageRepositoryImpl.kt  TemplateRepositoryImpl.kt
src/main/java/com/youyou/monitor/infra/sync/: TemplateSyncRepositoryAdapter.kt
src/main/java/com/youyou/monitor/infra/task/: ScheduledTaskManager.kt
src/test/java/youyou/monitor/screen/: ExampleUnitTest.kt
